--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <div class="game-section">
         <h3>🎮 ကစားနိုင်သောဂိမ်းများ:</h3>
         <ul>
-            <li>🏛️ လောင်းကစားဂိမ်းများ (Slots)</li>
+            <li>🏛️ စလော့ဂိမ်းများ (Slots)</li>
             <li>🐟 ငါးဖမ်းဂိမ်းများ</li>
-            <li>⚽ အားကစားလောင်းကစား (Sports Betting)</li>
+            <li>⚽ အားကစား (Sports Betting)</li>
             <li>🎰 Live Casino ဂိမ်းများ</li>
             <li>🎲 Mini Game များ</li>
         </ul>
