--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 <img src="promo4.jpg" alt="Promo 4">
 <img src="promo5.jpg" alt="Promo 5">
 <img src="promo6.jpg" alt="Promo 6">
-<img src="promo7.jpg" alt="Promo 7">
-<img src="promo8.jpg" alt="Promo 8">
-<img src="promo9.jpg" alt="Promo 9">
+<img src="promo7.png" alt="Promo 7">
+<img src="promo8.png" alt="Promo 8">
+<img src="promo9.png" alt="Promo 9">
 <img src="promo10.jpg" alt="Promo 10">
 <img src="promo11.jpg" alt="Promo 11">
 <img src="promo12.jpg" alt="Promo 12"> 
