--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     <div class="game-section">
         <h3>🎮 ကစားနိုင်သောဂိမ်းများ:</h3>
         <ul>
-            <li>🏛️ စလော့ဂိမ်းများ (Slots)</li>
+            <li>🎰 စလော့ဂိမ်းများ (Slots)</li>
             <li>🐟 ငါးဖမ်းဂိမ်းများ</li>
             <li>⚽ အားကစား (Sports Betting)</li>
-            <li>🎰 Live Casino ဂိမ်းများ</li>
+            <li>🃏 Live Casino ဂိမ်းများ</li>
             <li>🎲 Mini Game များ</li>
         </ul>
     </div>
