--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <footer>
         <h3>📞 ဆက်သွယ်ရန်:</h3>
         <div class="contact-icons">
-            <a href="https://t.me/ppg11vipBot"><img src="telegram.jpg" alt="Telegram"></a>
+            <a href="https://t.me/ppg11vipBot"><img src="telegram.png" alt="Telegram"></a>
             <a href="https://cutt.ly/ppgvb"><img src="viber.png" alt="Viber"></a>
             <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook.png" alt="Facebook"></a>
         </div>
