--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="my">
 <head>
@@ -10,6 +9,7 @@
             font-family: "Segoe UI", sans-serif;
             background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
             color: #fff;
+            font-size: 20px; /* 缅文字体增大 */
         }
         header {
             background-color: #000;
@@ -43,7 +43,7 @@
             margin: 20px auto;
             width: fit-content;
             border-radius: 10px;
-            font-size: 20px;
+            font-size: 22px;
         }
         .highlight-box a {
             color: red;
@@ -52,7 +52,7 @@
         }
         .game-section {
             text-align: center;
-            font-size: 22px;
+            font-size: 24px;
             margin-top: 20px;
         }
         .game-section ul {
@@ -60,18 +60,18 @@
             padding: 0;
         }
         .game-section li {
-            margin: 5px 0;
+            margin: 8px 0;
         }
         .promo-gallery {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr); /* 两张一行 */
             gap: 10px;
             padding: 20px;
             justify-items: center;
         }
         .promo-gallery img {
             width: 100%;
-            max-width: 300px;
+            max-width: 350px;
             border-radius: 10px;
         }
         .description {
@@ -80,24 +80,27 @@
             padding: 20px;
             margin: 20px;
             border-radius: 10px;
-            font-size: 18px;
+            font-size: 20px;
         }
         footer {
             background-color: black;
             text-align: center;
-            padding: 20px;
+            padding: 30px 20px;
         }
         footer h3 {
             color: gold;
+            font-size: 26px;
         }
         .contact-icons img {
-            width: 40px;
-            margin: 10px;
+            width: 60px;
+            height: 60px;
+            margin: 12px;
         }
         .hotline {
-            color: white;
-            font-size: 18px;
-            margin-top: 10px;
+            color: yellow;
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 15px;
         }
     </style>
 </head>
@@ -125,20 +128,19 @@
     </div>
 
     <div class="promo-gallery">
-        <!-- 12 image slots (placeholders) -->
         <img src="promo1.jpg" alt="Promo 1">
-<img src="promo2.jpg" alt="Promo 2">
-<img src="promo3.jpg" alt="Promo 3">
-<img src="promo4.jpg" alt="Promo 4">
-<img src="promo5.jpg" alt="Promo 5">
-<img src="promo6.jpg" alt="Promo 6">
-<img src="promo7.png" alt="Promo 7">
-<img src="promo8.png" alt="Promo 8">
-<img src="promo9.png" alt="Promo 9">
-<img src="promo10.jpg" alt="Promo 10">
-<img src="promo11.jpg" alt="Promo 11">
-<img src="promo12.jpg" alt="Promo 12"> 
-   </div>
+        <img src="promo2.jpg" alt="Promo 2">
+        <img src="promo3.jpg" alt="Promo 3">
+        <img src="promo4.jpg" alt="Promo 4">
+        <img src="promo5.jpg" alt="Promo 5">
+        <img src="promo6.jpg" alt="Promo 6">
+        <img src="promo7.png" alt="Promo 7">
+        <img src="promo8.png" alt="Promo 8">
+        <img src="promo9.png" alt="Promo 9">
+        <img src="promo10.jpg" alt="Promo 10">
+        <img src="promo11.jpg" alt="Promo 11">
+        <img src="promo12.jpg" alt="Promo 12"> 
+    </div>
 
     <div class="description">
         <h3>💡 PPG11 ဆိုတာဘာလဲ?</h3>
@@ -154,7 +156,7 @@
     </div>
 
     <footer>
-        <h3>📞 ဆက်သွယ်ရန်:</h3>
+        <h3>📞 ဆက်သွယ်ရန်</h3>
         <div class="contact-icons">
             <a href="https://t.me/ppg11vipBot"><img src="telegram.png" alt="Telegram"></a>
             <a href="https://cutt.ly/ppgvb"><img src="viber.png" alt="Viber"></a>
