--- a/index.html
+++ b/index.html
@@ -1,167 +1,209 @@
 <!DOCTYPE html>
 <html lang="my">
 <head>
-    <meta charset="UTF-8">
-    <title>PPG11 Landing Page</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: "Segoe UI", sans-serif;
-            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-            color: #fff;
-            font-size: 20px; /* 缅文字体增大 */
-        }
-        header {
-            background-color: #000;
-            padding: 20px;
-            position: relative;
-        }
-        header img.logo {
-            height: 60px;
-            position: absolute;
-            top: 10px;
-            left: 20px;
-        }
-        h1 {
-            text-align: center;
-            font-size: 48px;
-            color: gold;
-            margin: 0;
-        }
-        h2 {
-            text-align: center;
-            color: cyan;
-            margin: 0;
-            padding-bottom: 10px;
-        }
-        .highlight-box {
-            background: yellow;
-            color: black;
-            font-weight: bold;
-            text-align: center;
-            padding: 15px;
-            margin: 20px auto;
-            width: fit-content;
-            border-radius: 10px;
-            font-size: 22px;
-        }
-        .highlight-box a {
-            color: red;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .game-section {
-            text-align: center;
-            font-size: 24px;
-            margin-top: 20px;
-        }
-        .game-section ul {
-            list-style: none;
-            padding: 0;
-        }
-        .game-section li {
-            margin: 8px 0;
-        }
-        .promo-gallery {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr); /* 两张一行 */
-            gap: 10px;
-            padding: 20px;
-            justify-items: center;
-        }
-        .promo-gallery img {
-            width: 100%;
-            max-width: 350px;
-            border-radius: 10px;
-        }
-        .description {
-            background: rgba(255, 255, 255, 0.1);
-            border-left: 5px solid cyan;
-            padding: 20px;
-            margin: 20px;
-            border-radius: 10px;
-            font-size: 20px;
-        }
-        footer {
-            background-color: black;
-            text-align: center;
-            padding: 30px 20px;
-        }
-        footer h3 {
-            color: gold;
-            font-size: 26px;
-        }
-        .contact-icons img {
-            width: 60px;
-            height: 60px;
-            margin: 12px;
-        }
-        .hotline {
-            color: yellow;
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 15px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>PPG11 Landing Page</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      font-size: 20px;
+    }
+
+    header {
+      background-color: #000;
+      padding: 20px;
+      position: relative;
+    }
+
+    header img.logo {
+      height: 60px;
+      position: absolute;
+      top: 10px;
+      left: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 48px;
+      color: gold;
+      margin: 0;
+    }
+
+    h2 {
+      text-align: center;
+      color: cyan;
+      margin: 0;
+      padding-bottom: 10px;
+    }
+
+    .highlight-box {
+      background: yellow;
+      color: black;
+      font-weight: bold;
+      text-align: center;
+      padding: 15px;
+      margin: 20px auto;
+      width: fit-content;
+      border-radius: 10px;
+      font-size: 22px;
+    }
+
+    .highlight-box a {
+      color: red;
+      text-decoration: none;
+      font-weight: bold;
+      margin-left: 10px;
+    }
+
+    .contact-box {
+      background: rgba(0, 0, 0, 0.5);
+      margin: 20px auto;
+      padding: 20px;
+      text-align: center;
+      border-radius: 10px;
+      max-width: 600px;
+    }
+
+    .contact-box h3 {
+      color: gold;
+      font-size: 24px;
+      margin-bottom: 15px;
+    }
+
+    .contact-icons {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin: 10px 0;
+    }
+
+    .contact-icons a img {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
+    }
+
+    .hotline {
+      color: yellow;
+      font-size: 22px;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    .game-section {
+      text-align: center;
+      font-size: 24px;
+      margin-top: 20px;
+    }
+
+    .game-section ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .game-section li {
+      margin: 8px 0;
+    }
+
+    .promo-gallery {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+      padding: 20px;
+      justify-items: center;
+    }
+
+    .promo-gallery img {
+      width: 100%;
+      max-width: 320px;
+      border-radius: 10px;
+    }
+
+    .description {
+      background: rgba(255, 255, 255, 0.1);
+      border-left: 5px solid cyan;
+      padding: 20px;
+      margin: 20px;
+      border-radius: 10px;
+      font-size: 20px;
+    }
+
+    footer {
+      background-color: black;
+      text-align: center;
+      padding: 10px;
+      color: #888;
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="ppg11-logo.png" alt="PPG11 Logo" class="logo">
-        <h1>PPG11</h1>
-        <h2>အွန်လိုင်းဂိမ်းကစားမယ်ဆို PPG11 ကိုသာရွေးချယ်လိုက်ပါ</h2>
-    </header>
+  <header>
+    <img src="ppg11-logo.png" alt="PPG11 Logo" class="logo" />
+    <h1>PPG11</h1>
+    <h2>အွန်လိုင်းဂိမ်းကစားမယ်ဆို PPG11 ကိုသာရွေးချယ်လိုက်ပါ</h2>
+  </header>
 
-    <div class="highlight-box">
-        မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ် 
-        <a href="https://ppg11.com">Get Now 👉</a>
-    </div>
-        <footer>
-        <h3>📞 ဆက်သွယ်ရန်</h3>
-        <div class="contact-icons">
-            <a href="https://t.me/ppg11vipBot"><img src="telegram.png" alt="Telegram"></a>
-            <a href="https://cutt.ly/ppgvb"><img src="viber.png" alt="Viber"></a>
-            <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook.png" alt="Facebook"></a>
-        </div>
-        <div class="hotline">Hotline: 09778891168</div>
-    </footer>
+  <div class="highlight-box">
+    မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ်
+    <a href="https://ppg11.com">👉 Get Now 👈</a>
+  </div>
 
-    <div class="game-section">
-        <h3>🎮 ကစားနိုင်သောဂိမ်းများ:</h3>
-        <ul>
-            <li>🎰 စလော့ဂိမ်းများ (Slots)</li>
-            <li>🐟 ငါးဖမ်းဂိမ်းများ</li>
-            <li>⚽ အားကစား (Sports Betting)</li>
-            <li>🃏 Live Casino ဂိမ်းများ</li>
-            <li>🎲 Mini Game များ</li>
-        </ul>
+  <!-- 联系方式模块移至活动区下方 -->
+  <div class="contact-box">
+    <h3>📞 ဆက်သွယ်ရန်</h3>
+    <div class="contact-icons">
+      <a href="https://t.me/ppg11vipBot"><img src="telegram.png" alt="Telegram" /></a>
+      <a href="https://cutt.ly/ppgvb"><img src="viber.png" alt="Viber" /></a>
+      <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook.png" alt="Facebook" /></a>
     </div>
+    <div class="hotline">Hotline: 09778891168</div>
+  </div>
 
-    <div class="promo-gallery">
-        <img src="promo1.jpg" alt="Promo 1">
-        <img src="promo2.jpg" alt="Promo 2">
-        <img src="promo3.jpg" alt="Promo 3">
-        <img src="promo4.jpg" alt="Promo 4">
-        <img src="promo5.jpg" alt="Promo 5">
-        <img src="promo6.jpg" alt="Promo 6">
-        <img src="promo7.png" alt="Promo 7">
-        <img src="promo8.png" alt="Promo 8">
-        <img src="promo9.png" alt="Promo 9">
-        <img src="promo10.jpg" alt="Promo 10">
-        <img src="promo11.jpg" alt="Promo 11">
-        <img src="promo12.jpg" alt="Promo 12"> 
-    </div>
+  <div class="game-section">
+    <h3>🎮 ကစားနိုင်သောဂိမ်းများ:</h3>
+    <ul>
+      <li>🎰 စလော့ဂိမ်းများ (Slots)</li>
+      <li>🐟 ငါးဖမ်းဂိမ်းများ</li>
+      <li>⚽ အားကစား (Sports Betting)</li>
+      <li>🃏 Live Casino ဂိမ်းများ</li>
+      <li>🎲 Mini Game များ</li>
+    </ul>
+  </div>
 
-    <div class="description">
-        <h3>💡 PPG11 ဆိုတာဘာလဲ?</h3>
-        <p>
-            PPG11 သည် ၃ နှစ်ကျော်အတွင်းအကြီးမားဆုံးကမ္ဘာတစ်ဝှမ်းမှသူငယ်ချင်းများကြားအကြိုက်ဆုံး Slot, ငါးဖမ်း, အားကစားလောင်းကစားနှင့် Live Casino များပါဝင်သော ပြိုင်ဆိုင်မှုများကိုဖော်ဆောင်ပေးသော platform တစ်ခုဖြစ်သည်။
-        </p>
-        <p>
-            ပုံမှန်ပြုလုပ်သောထူးခြားသော Promotion များ၊ Telegram၊ Viber နှင့် Facebook တို့မှတဆင့် အချိန်မရွေး customer support စောင့်ဆိုင်းနေပါသည်။
-        </p>
-        <p>
-            ယခုကြည့်တဲ့စျေးနှုန်းတွေနဲ့ဂိမ်းဆော့ဖို့အချိန်မှာ PPG11 ကိုသာရွေးချယ်ပါ။
-        </p>
-    </div>
+  <div class="promo-gallery">
+    <img src="promo1.jpg" alt="Promo 1" />
+    <img src="promo2.jpg" alt="Promo 2" />
+    <img src="promo3.jpg" alt="Promo 3" />
+    <img src="promo4.jpg" alt="Promo 4" />
+    <img src="promo5.jpg" alt="Promo 5" />
+    <img src="promo6.jpg" alt="Promo 6" />
+    <img src="promo7.png" alt="Promo 7" />
+    <img src="promo8.png" alt="Promo 8" />
+    <img src="promo9.png" alt="Promo 9" />
+    <img src="promo10.jpg" alt="Promo 10" />
+    <img src="promo11.jpg" alt="Promo 11" />
+    <img src="promo12.jpg" alt="Promo 12" />
+  </div>
+
+  <div class="description">
+    <h3>💡 PPG11 ဆိုတာဘာလဲ?</h3>
+    <p>
+      PPG11 သည် ၃ နှစ်ကျော်အတွင်းအကြီးမားဆုံးကမ္ဘာတစ်ဝှမ်းမှသူငယ်ချင်းများကြားအကြိုက်ဆုံး Slot, ငါးဖမ်း, အားကစားလောင်းကစားနှင့် Live Casino များပါဝင်သော ပြိုင်ဆိုင်မှုများကိုဖော်ဆောင်ပေးသော platform တစ်ခုဖြစ်သည်။
+    </p>
+    <p>
+      ပုံမှန်ပြုလုပ်သောထူးခြားသော Promotion များ၊ Telegram၊ Viber နှင့် Facebook တို့မှတဆင့် အချိန်မရွေး customer support စောင့်ဆိုင်းနေပါသည်။
+    </p>
+    <p>
+      ယခုကြည့်တဲ့စျေးနှုန်းတွေနဲ့ဂိမ်းဆော့ဖို့အချိန်မှာ PPG11 ကိုသာရွေးချယ်ပါ။
+    </p>
+  </div>
+
+  <footer>
+    © 2025 PPG11 – All rights reserved.
+  </footer>
 </body>
 </html>
