--- a/index.html
+++ b/index.html
@@ -3,40 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <title>PPG11 Landing Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       margin: 0;
       font-family: "Segoe UI", sans-serif;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: #fff;
-      font-size: 20px;
     }
 
     header {
       background-color: #000;
       padding: 20px;
-      position: relative;
+      text-align: center;
     }
 
     header img.logo {
-      height: 60px;
-      position: absolute;
-      top: 10px;
-      left: 20px;
+      height: 100px;
+      margin-bottom: 10px;
     }
 
     h1 {
-      text-align: center;
-      font-size: 48px;
+      font-size: 42px;
       color: gold;
-      margin: 0;
+      margin: 5px 0;
     }
 
     h2 {
-      text-align: center;
+      font-size: 18px;
       color: cyan;
-      margin: 0;
-      padding-bottom: 10px;
+      margin-bottom: 10px;
     }
 
     .highlight-box {
@@ -44,10 +40,11 @@
       color: black;
       font-weight: bold;
       text-align: center;
-      padding: 15px;
-      margin: 20px auto;
-      width: fit-content;
-      border-radius: 10px;
+      padding: 20px;
+      margin: 20px auto 10px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 12px;
       font-size: 22px;
     }
 
@@ -55,47 +52,40 @@
       color: red;
       text-decoration: none;
       font-weight: bold;
-      margin-left: 10px;
     }
 
-    .contact-box {
-      background: rgba(0, 0, 0, 0.5);
-      margin: 20px auto;
-      padding: 20px;
+    .contact-section {
+      background-color: #000;
+      padding: 25px 10px 15px;
+      margin: 0 auto 20px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 420px;
       text-align: center;
-      border-radius: 10px;
-      max-width: 600px;
     }
 
-    .contact-box h3 {
+    .contact-section h3 {
       color: gold;
-      font-size: 24px;
+      font-size: 20px;
       margin-bottom: 15px;
     }
 
-    .contact-icons {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin: 10px 0;
-    }
-
-    .contact-icons a img {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
+    .contact-icons img {
+      width: 80px;
+      height: 80px;
+      margin: 10px;
     }
 
     .hotline {
-      color: yellow;
-      font-size: 22px;
-      margin-top: 10px;
+      color: #ff0;
+      font-size: 20px;
       font-weight: bold;
+      margin-top: 10px;
     }
 
     .game-section {
       text-align: center;
-      font-size: 24px;
+      font-size: 22px;
       margin-top: 20px;
     }
 
@@ -109,16 +99,16 @@
     }
 
     .promo-gallery {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       gap: 15px;
-      padding: 20px;
-      justify-items: center;
+      padding: 20px 10px;
     }
 
     .promo-gallery img {
-      width: 100%;
-      max-width: 320px;
+      width: 90%;
+      max-width: 400px;
       border-radius: 10px;
     }
 
@@ -128,15 +118,11 @@
       padding: 20px;
       margin: 20px;
       border-radius: 10px;
-      font-size: 20px;
+      font-size: 18px;
     }
 
     footer {
-      background-color: black;
-      text-align: center;
-      padding: 10px;
-      color: #888;
-      font-size: 16px;
+      display: none;
     }
   </style>
 </head>
@@ -148,17 +134,16 @@
   </header>
 
   <div class="highlight-box">
-    မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ်
-    <a href="https://ppg11.com">👉 Get Now 👈</a>
+    မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ် <br />
+    <a href="https://ppg11.com">👉 Get Now</a>
   </div>
 
-  <!-- 联系方式模块移至活动区下方 -->
-  <div class="contact-box">
+  <div class="contact-section">
     <h3>📞 ဆက်သွယ်ရန်</h3>
     <div class="contact-icons">
-      <a href="https://t.me/ppg11vipBot"><img src="telegram.png" alt="Telegram" /></a>
-      <a href="https://cutt.ly/ppgvb"><img src="viber.png" alt="Viber" /></a>
-      <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook.png" alt="Facebook" /></a>
+      <a href="https://t.me/ppg11vipBot"><img src="telegram_80x80.png" alt="Telegram" /></a>
+      <a href="https://cutt.ly/ppgvb"><img src="viber_80x80.png" alt="Viber" /></a>
+      <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook_80x80.png" alt="Facebook" /></a>
     </div>
     <div class="hotline">Hotline: 09778891168</div>
   </div>
@@ -167,7 +152,7 @@
     <h3>🎮 ကစားနိုင်သောဂိမ်းများ:</h3>
     <ul>
       <li>🎰 စလော့ဂိမ်းများ (Slots)</li>
-      <li>🐟 ငါးဖမ်းဂိမ်းများ</li>
+      <li>🐟 ငါးပမ်းဂိမ်းများ</li>
       <li>⚽ အားကစား (Sports Betting)</li>
       <li>🃏 Live Casino ဂိမ်းများ</li>
       <li>🎲 Mini Game များ</li>
@@ -201,9 +186,5 @@
       ယခုကြည့်တဲ့စျေးနှုန်းတွေနဲ့ဂိမ်းဆော့ဖို့အချိန်မှာ PPG11 ကိုသာရွေးချယ်ပါ။
     </p>
   </div>
-
-  <footer>
-    © 2025 PPG11 – All rights reserved.
-  </footer>
 </body>
 </html>
