--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
   <div class="contact-section">
     <h3>📞 ဆက်သွယ်ရန်</h3>
     <div class="contact-icons">
-      <a href="https://t.me/ppg11vipBot"><img src="telegram_80x80.png" alt="Telegram" /></a>
-      <a href="https://cutt.ly/ppgvb"><img src="viber_80x80.png" alt="Viber" /></a>
-      <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook_80x80.png" alt="Facebook" /></a>
+      <a href="https://t.me/ppg11vipBot"><img src="telegram.png" alt="Telegram" /></a>
+      <a href="https://cutt.ly/ppgvb"><img src="viber.png" alt="Viber" /></a>
+      <a href="https://www.facebook.com/profile.php?id=61550626169163"><img src="facebook.png" alt="Facebook" /></a>
     </div>
     <div class="hotline">Hotline: 09778891168</div>
   </div>
