--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     }
 
     .contact-section {
-      background-color: #000;
-      padding: 25px 10px 15px;
-      margin: 0 auto 20px;
+      background-color: #1c2b3a;  /* 更协调的深蓝色 */
+      padding: 15px 10px;
+      margin: 20px auto;
       border-radius: 12px;
       width: 90%;
-      max-width: 420px;
+      max-width: 380px;
       text-align: center;
     }
 
@@ -71,16 +71,17 @@
     }
 
     .contact-icons img {
-      width: 80px;
-      height: 80px;
-      margin: 10px;
+       width: 60px;
+       height: 60px;
+       object-fit: contain;
+       margin: 8px;
     }
 
     .hotline {
-      color: #ff0;
-      font-size: 20px;
+      color: #ffff00;
+      font-size: 18px;
       font-weight: bold;
-      margin-top: 10px;
+      margin-top: 12px;
     }
 
     .game-section {
@@ -135,7 +136,7 @@
 
   <div class="highlight-box">
     မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ် <br />
-    <a href="https://ppg11.com">👉 Get Now</a>
+    <a href="https://ppg11.com">👉 Get Now 👈</a>
   </div>
 
   <div class="contact-section">
