--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
   </header>
 
   <div class="highlight-box">
-    မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ် 👉 
-    <a href="https://ppg11.com" target="_blank">Get Now</a>
+    မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ်  
+    <a href="https://ppg11.com" target="_blank"> 👉 Get Now👈 </a>
   </div>
 
   <div class="contact-block">
