--- a/index.html
+++ b/index.html
@@ -204,5 +204,6 @@
   <footer>
     &copy; 2025 PPG11. All rights reserved.
   </footer>
+    <script src="https://assets.salesmartly.com/js/project_34683_36224_1702971086.js"></script>
 </body>
 </html>
