--- a/index.html
+++ b/index.html
@@ -189,16 +189,31 @@
   </div>
 
   <div class="description">
-    <h3>💡 PPG11 ဆိုတာဘာလဲ?</h3>
+    <h3>📌 PPG11 ကို ဘာလို့ ရွေးချယ်တင့်သလဲ ??</h3>
     <p>
-      PPG11 သည် ၃ နှစ်ကျော်အတွင်းအကြီးမားဆုံးကမ္ဘာတစ်ဝှမ်းမှသူငယ်ချင်းများကြားအကြိုက်ဆုံး Slot, ငါးဖမ်း, အားကစားလောင်းကစားနှင့် Live Casino များပါဝင်သော ပြိုင်ဆိုင်မှုများကိုဖော်ဆောင်ပေးသော platform တစ်ခုဖြစ်သည်။
+      PPG11 သည် မြန်မာနိုင်ငံအပါအဝင် အာရှဒေသများတွင် အလွန်ရေပန်းစားသော အွန်လိုင်းဂိမ်းကစားဝက်ဘ်ဆိုဒ်တစ်ခုဖြစ်ပြီး၊
+လွန်ခဲ့သော ၃ နှစ်ကျော်အချိန်အတွင်း တိုးတက်မှုမြန်ဆန်၍ ယုံကြည်စိတ်ချရမှုအပြည့်အဝရရှိထားသည်။
     </p>
     <p>
-      ပုံမှန်ပြုလုပ်သောထူးခြားသော Promotion များ၊ Telegram၊ Viber နှင့် Facebook တို့မှတဆင့် အချိန်မရွေး customer support စောင့်ဆိုင်းနေပါသည်။
+      💎 ဘဏ္ဍာရေးအရ အားကြီးမှု – သန်းချီသောကျပ်ငွေထုတ်ယူမှုကို အချိန်မရွေး ပြီးမြောက်အောင်ဆောင်ရွက်နိုင်သည်။
     </p>
     <p>
-      ယခုကြည့်တဲ့စျေးနှုန်းတွေနဲ့ဂိမ်းဆော့ဖို့အချိန်မှာ PPG11 ကိုသာရွေးချယ်ပါ။
+      🤝 Customer Support ဝန်ဆောင်မှု – Telegram၊ Viber နှင့် Facebook တို့မှတဆင့် ၂၄ နာရီအတွင်း တုံ့ပြန်မှုမြန်ဆန်သည်။
     </p>
+    <p>
+      🎮 ဂိမ်းအမျိုးအစား အပြည့်အစုံ – Slots၊ ငါးဖမ်းဂိမ်းများ၊ အားကစားလောင်းကစား၊ Live Casino နှင့် Mini Games များပါဝင်သည်။
+    </p>
+    <p>
+      📈 Promotions များစွာ – မကြာခဏ ပြုလုပ်သော မန်ဘာသစ်အတွက် Welcome Bonus နှင့် အထူး Cashbackများကို ပြုလုပ်ပေးသည်။
+    </p>
+    <p>
+      ❤️ ယုံကြည်မှုနှင့် လူကြိုက်များမှု – အသုံးပြုသူအများအပြား၏ ကြိုက်နှစ်သက်မှုကို ရရှိထားပြီး စိတ်ကျေနပ်မှုမြင့်မားသည်။
+    </p>
+    <p>
+      PPG11 ကိုရွေးချယ်ခြင်းသည် ယနေ့အချိန်မှာ အကောင်းဆုံးဆုံးဖြတ်ချက်တစ်ခုဖြစ်ပါသည်။
+      ဂိမ်းကစားသည့်အခါ စိတ်ချ၊ ချောမွေ့ပြီး စိတ်လှုပ်ရှားဖွယ်အတွေ့အကြုံကို ပေးစွမ်းနိုင်ပါသည်။
+    </p>
+
   </div>
 
   <footer>
