--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <div class="highlight-box">
     မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ်  
-    <a href="https://ppg11.com" target="_blank"> 👉 Get Now👈 </a>
+    <a href="https://pyvxb.ppg11.com/register.html" target="_blank"> 👉 Get Now👈 </a>
   </div>
 
   <div class="contact-block">
