--- a/index.html
+++ b/index.html
@@ -151,7 +151,15 @@
     မန်ဘာသစ် ဖရီး ၃၀၀၀ ကျပ်  
     <a href="https://pyvxb.ppg11.com/register.html" target="_blank"> 👉 Get Now👈 </a>
   </div>
-
+    <div style="background: rgba(255, 255, 255, 0.08); color: white; text-align: center; padding: 20px; border-radius: 12px; max-width: 90%; margin: 0 auto 20px auto; font-size: 20px;">
+  <p style="margin-bottom: 15px;">
+    PPG11 မှ ဖရီး ၃၀၀၀ ကျပ် မတ်စေ့ပို့ထားတဲ့ဧည့်သည်များအားလုံး ဖရီးဘောနပ်ယူနိုင်သည်။<br>
+    မတ်စေ့လက်ခံထားတဲ့ဖုန်းနံပါတ်ဖြစ်အကောင့်ဖွင့်ပါ။ အကောင့်ရပြီးဆို မင်မင် ဆီဖရီးဘောနပ် တောင်းလိုက်ပါ။
+  </p>
+  <a href="https://pyvxb.ppg11.com/register.html" target="_blank" style="display: inline-block; background-color: gold; color: black; font-weight: bold; padding: 12px 24px; border-radius: 8px; font-size: 20px; text-decoration: none;">
+    အကောင့်ဖွင့်ရန်
+  </a>
+</div>
   <div class="contact-block">
     <h3>📞 ဆက်သွယ်ရန်</h3>
     <ul>
